bugfix:The main image is not displaying correctly on mobile devices

--- a/assets/base.css
+++ b/assets/base.css
@@ -4488,3 +4488,12 @@ label.variant-option__button-label.variant-option__button-label--has-swatch {
 }
 
 
+@media screen and (max-width: 749px) {
+  
+:not(.dialog-zoomed-gallery) > .product-media-container {
+
+
+  display: block;
+
+}
+}
